# mcp-gatehouse

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml
examples/: orders_server.py
src/mcp_gatehouse/: __init__.py  audit.py  demo.py  gatehouse.py  policy.py
tests/: test_gatehouse.py  test_policy.py  test_review_findings.py
